--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Roboto&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:"Open Sans",sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+#footer .shadow-lg{
+  background: rgba(15, 13, 13, 0.36);
+  width: 80%;
+  color:#fff;
+  backdrop-filter:blur(5px);
+}
+.text-title{
+  color: #34b7a7 !important;
+
+}
+.bg-theme{
+  background-color: #34b7a7;
 }
